--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Expand App Backend",
   "main": "app.js",
   "dependencies": {
+    "aws-sdk": "^2.675.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
@@ -11,6 +12,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.13",
     "mongoose-seed": "^0.6.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
