--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "mongoose": "^5.9.13",
     "mongoose-seed": "^0.6.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemon": "^2.0.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "path": "^0.12.7",
+    "url": "^0.11.0",
     "validator": "^13.0.0"
   },
   "devDependencies": {},
