--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
+    "react-icons": "^3.10.0",
     "url": "^0.11.0",
     "validator": "^13.0.0"
   },
